--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Welcome to My Portfolio </title>
 <img src="
 IMG-20171208-WA0036.jp"/>
-<p>
+<p>My name is Janelle Tan
 . </p>
 <p>
 Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>. </p>
