--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <body>
 <h1> My Personal Portfolio </h1>
 <title>Welcome to My Portfolio </title>
-<img src="
-IMG-20171208-WA0036.jp"/>
-<p>My name is Janelle Tan
-. </p>
-<p>
+<img src="IMG-20171208-WA0036.jp"/>
+<p>My name is Janelle Tan.My secondary school is Dunman High.</p>
+  <h2>My hobby</h2>
+<p> 
+  <li>Playing netball</li>
+  <li> Watching dramas</li>
 Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>. </p>
 <br>
 <p </p> 
