--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1> My Personal Portfolio </h1>
 <title>Welcome to My Portfolio </title>
-<img src="IMG-20171208-WA0036.jp"/>
+<img src="IMG-20171208-WA0036.jpg"/>
 <p>My name is Janelle Tan.My secondary school is Dunman High.</p>
   <h2>My hobbies</h2>
 <p> 
