--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <li>Playing netball</li>
   <li> Watching dramas</li>
   </p>
-
-
+<h3> 
+  My Accomplishments
+</h3>
+  <p>
+    <li>Achieved 1st Presentation for International Friendship Day</li> 
+  </p>
 
 
 
