--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   My Accomplishments
 </h3>
   <p>
-    <li>Achieved 1st Presentation for International Friendship Day</li> 
+    <li>Achieved 1st for Internatinal Friendship Day Presentation</li> 
   </p>
 
 
