--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+<head>
 <h1> My Personal Portfolio </h1>
+ </style>
+ </head>
 <title>Welcome to My Portfolio </title>
  <img src="IMG-20171208-WA0036.jpg" />
 <p>My name is Janelle Tan.My secondary school is Dunman High.</p>
