--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </p>
 <h3> 
   My Accomplishments
- Achieved 1st for Internatinal Friendship Day Presentation
+ <li>Achieved 1st for Internatinal Friendship Day Presentation</li>
+ 
 </h3>
   
   
